  raise exceptions.
  (David Allsopp)

- GPR#1431: remove ocamlrun dependencies on curses/terminfo/termcap C library
  (Xavier Leroy, review by Daniel Bünzli)

- GPR#1478: The Spacetime profiler now works under Windows (but it is not yet
  able to collect profiling information from C stubs).
  (Nicolás Ojeda Bär, review by Xavier Leroy, Mark Shinwell)

- GPR#1526: install the debug and instrumented runtimes
  (lib{caml,asm}run{d,i}.a)
  (Gabriel Scherer, reminded by Julia Lawall)

- GPR#1563: simplify implementation of LSRINT and ASRINT
  (Max Mouratov, review by Frédéric Bour)

### Tools:

- MPR#7643, GPR#1377: ocamldep, fix an exponential blowup in presence of nested
  structures and signatures (e.g. "include struct … include(struct … end) … end")
  (Florian Angeletti, review by Gabriel Scherer, report by Christophe Raffalli)

- MPR#7710: `ocamldep -sort` should exit with nonzero code in case of
  cyclic dependencies
  (Xavier Leroy, report by Mantis user baileyparker)

- GPR#1585: optimize output of "ocamllex -ml"
  (Alain Frisch, review by Frédéric Bour and Gabriel Scherer)

### Manual and documentation:

- PR#7647, GPR#1384: emphasize ocaml.org website and forum in README
  (Yawar Amin, review by Gabriel Scherer)

- GPR#1540: manual, decouple verbatim and toplevel style in code examples
  (Florian Angeletti, review by Gabriel Scherer)

- PR#7698, GPR#1545: improve wording in OCaml manual in several places,
  mostly in Chapter 1.  This addresses the easier changes suggested in the PR.
  (Jim Fehrle, review by Florian Angeletti and David Allsopp)

- GPR#1556: manual, add a consistency test for manual references inside
  the compiler source code.
  (Florian Angeletti, review by Gabriel Scherer)

### Compiler distribution build system

- MPR#7679: make sure .a files are erased before calling ar rc, otherwise
  leftover .a files from an earlier compilation may contain unwanted modules
  (Xavier Leroy)

### Internal/compiler-libs changes:
