@@ -152,6 +152,10 @@ Working version
   able to collect profiling information from C stubs).
   (Nicolás Ojeda Bär, review by Xavier Leroy, Mark Shinwell)
 
+- GPR#1483: fix GC freelist accounting for chunks larger than the maximum block
+  size.
+  (David Allsopp and Damien Doligez)
+
 - GPR#1526: install the debug and instrumented runtimes
   (lib{caml,asm}run{d,i}.a)
   (Gabriel Scherer, reminded by Julia Lawall)
